--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,5 @@ pytest-django==4.7.0  # for testing
 pytest==7.4.4  # for testing
 wait-for-it==2.2.2
 django-allauth==0.61.1  # for authentication
+test-requirements==0.1.0
+python-dotenv==1.0.0
